--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,3 +3,9 @@ nodaemon=true
 
 [program:sshd]
 command=/usr/sbin/sshd -D
+
+[program:nginx]
+command=/usr/sbin/nginx
+
+[program:php-fpm]
+command=/usr/sbin/php-fpm7.0  --nodaemonize
